--- a/run_tests.html
+++ b/run_tests.html
@@ -3,7 +3,7 @@
 <head>
     <script type="text/javascript">
         // set the pyodide files URL (packages.json, pyodide.asm.data etc)
-        window.languagePluginUrl = 'http://localhost:8000/';
+        window.languagePluginUrl = 'https://brian-team.github.io/brian2_pyodide/';
     </script>
     <script src="pyodide.js"></script>
 </head>
