--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <script type="text/javascript">
         // set the pyodide files URL (packages.json, pyodide.asm.data etc)
-        window.languagePluginUrl = 'https://brian-team.github.io/brian2_pyodide/';
+        window.languagePluginUrl = 'https://media.githubusercontent.com/media/brian-team/brian2_pyodide/master/';
     </script>
     <script src="pyodide.js"></script>
 </head>
