Move pyodide out of git lfs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         // set the pyodide files URL (packages.json, pyodide.asm.data etc)
         window.languagePluginUrl = 'https://media.githubusercontent.com/media/brian-team/brian2_pyodide/master/';
     </script>
-    <script src="https://media.githubusercontent.com/media/brian-team/brian2_pyodide/master/pyodide.js"></script>
+    <script src="pyodide.js"></script>
 </head>
 <body>
 Pyodide Brian2 test <br>
